--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </div>
 
   <footer>
-    <p>&copy; 2025 Your Name | <a href="https://github.com/Melisaysnuh">Git Hub</a></p>
+    <p>&copy; 2025 Melissa Cessna | <a href="https://github.com/Melisaysnuh">Git Hub</a></p>
   </footer>
 
   <script src="index.js"></script>
